# libre-api-pg

./: .gitignore  README.md  analyze_data.ipynb  app.py  get_data.py  pyproject.toml
src/: LibrelinkClient.py  main.py
src/libre_api_pg/: __init__.py  __main__.py  download_readings.py  main.py  save_all_surrealdb_records.py
