[project]
name = "libre-api-pg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sam Purkis", email = "sam.purkis@hotmail.co.uk" }
]
dependencies = [
    "surrealdb>=0.3.2",
    "libre-linkup-py>=0.2.0",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"libre-api-pg" = "libre_api_pg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libre_api_pg"]
